--- a/lab1/lab1-Part1-Team30.css
+++ b/lab1/lab1-Part1-Team30.css
@@ -1,18 +1,51 @@
+body {
+	background-color: #242526;
+	color: white;
+	font-family: Arial, Helvetica, sans-serif;
 
-/*basic border for table, feel free to change*/
-table, th, td {
-    border:1px solid black;
-  }
+}
+
+th {
+	padding-top: 12px;
+	padding-bottom: 12px;
+	background-color: #1a1a1a;
+	text-align: left;
+}
+
+tr:nth-child(even){background-color: #1a1a1a;}
+
+tr:hover {background-color: #343434;}
+
+td, th {
+	padding:5px;
+	border: 2px solid grey;
+}
 
 /*no border for first column (radio buttons)*/
-  table, th, td:first-child {
+table, th, td:first-child {
     border: none;
-  }
+}
 
-table img{
+img{
     width:200px;
     height: auto;
-  }
+}
 
+table {
+	width: 100%;
+}
+
+button {
+  background-color: #3b3b3b;
+  border-color: coral;
+  color: white;
+  padding: 5px 5px;
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 
 
