--- a/lab1/lab1-Part1-Team30.css
+++ b/lab1/lab1-Part1-Team30.css
@@ -49,4 +49,11 @@ button {
   cursor: pointer;
 }
 
-
+#circle{
+  width:60px;
+  height:60px;
+  background: #3b3b3b;
+  border: coral 1px solid;
+  border-radius: 100%;
+  margin: 25px;
+}
