--- a/lab2/artwork.css
+++ b/lab2/artwork.css
@@ -1,51 +1,69 @@
 .padding{
-  padding-top:5%  
-}
-
-body{
-    background-color: #242526;
-}
-
-h1{
-    color:white
-}
-
-p {
-    color: #e0e0e0
-}
-
-.input-field label {
-    color: #80cbc4;
+    padding-top:5%  
+  }
+  
+  body{
+      background-color: #242526;
+  }
+  
+  h1{
+      color:white
+  }
+  
+  p {
+      color: #e0e0e0
+  }
+  
+  .input-field label {
+      color: #80cbc4;
+    }
+  
+  
+  .input-field [type=text] {
+      color: white;
+  }
+  
+  .save-button {
+      margin-top: 1px;
+      margin-right: 2px;
+      position:absolute;
+      top:0;
+      right:0;
+      width: 10%;
+      
+  }
+  
+  .clear-button {
+      margin-top: 40px;
+      margin-right: 2px;
+      position:absolute;
+      top:0;
+      right:0;
+      width: 10%;
+  }
+  
+  .index {
+      margin-top: 100px;
+      margin-right: 2px;
+      position:absolute;
+      top:0;
+      right:0;
   }
 
+  #box-c{
+      display:flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 300px;
+      height: 300px;
+      border-radius: 5px;
+      background:#3a3c3d;
+      padding: 10px;
+      margin:auto;
+  }
 
-.input-field [type=text] {
-    color: white;
-}
-
-.save-button {
-    margin-top: 1px;
-    margin-right: 2px;
-    position:absolute;
-    top:0;
-    right:0;
-    width: 10%;
-    
-}
-
-.clear-button {
-    margin-top: 40px;
-    margin-right: 2px;
-    position:absolute;
-    top:0;
-    right:0;
-    width: 10%;
-}
-
-.index {
-    margin-top: 100px;
-    margin-right: 2px;
-    position:absolute;
-    top:0;
-    right:0;
-}
+  #box-c p span{
+      color:#80cbc4;
+      font-weight: bold;
+  }
