--- a/lab2/artwork.css
+++ b/lab2/artwork.css
@@ -50,7 +50,14 @@
       right:0;
   }
 
-  #box-c{
+  #boxes{
+      width: 100%;
+      display: flex;
+      align-items: center;
+  }
+
+  .box{
+      
       display:flex;
       justify-content: center;
       align-items: center;
@@ -60,10 +67,23 @@
       border-radius: 5px;
       background:#3a3c3d;
       padding: 10px;
-      margin:auto;
+      
   }
 
-  #box-c p span{
+  .box p span{
       color:#80cbc4;
       font-weight: bold;
+      
+  }
+
+  #box-c{
+    position: relative;
+    left: 190px;
+    justify-self: center;
+    margin:auto;
+  }
+
+  #box-e{
+    justify-self: flex-end;
+    margin-right: 60px;
   }
