--- a/lab2/artwork.css
+++ b/lab2/artwork.css
@@ -63,7 +63,7 @@
       align-items: center;
       flex-direction: column;
       width: 300px;
-      height: 300px;
+      height: 350px;
       border-radius: 5px;
       background:#3a3c3d;
       padding: 10px;
@@ -86,4 +86,18 @@
   #box-e{
     justify-self: flex-end;
     margin-right: 60px;
+  }
+
+  .box h2{
+      color:#80cbc4;
+      font-size: 20px;
+  }
+
+  #index-form{
+      margin:auto;
+      width: 60%;
+  }
+
+  #index-form select{
+    width: 100px;
   }
