--- a/lab2/artwork.css
+++ b/lab2/artwork.css
@@ -58,15 +58,14 @@
 
   .box{
       
-      display:flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      width: 300px;
-      height: 350px;
-      border-radius: 5px;
-      background:#3a3c3d;
-      padding: 10px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 325px;
+    border-radius: 5px;
+    background:#3a3c3d;
+    padding: 10px;
       
   }
 
@@ -90,12 +89,14 @@
 
   .box h2{
       color:#80cbc4;
-      font-size: 20px;
+      font-size: 23px;
   }
 
   #index-form{
-      margin:auto;
-      width: 60%;
+      width: 10%;
+      position: absolute;
+      right: 125px;
+      padding-top: 2%;
   }
 
   #index-form select{
