--- a/project/css/about.css
+++ b/project/css/about.css
@@ -10,6 +10,81 @@ html{
 }
 
 body{
-    font-family: 'Open Sans', sans-serif;
     overflow-x: hidden;
+    background:#FDFDFF;
+    color:#393D3F;
+    text-align: center;
+}
+
+span{
+    color:#149BBB;
+}
+
+#about-desc{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height:50vh;
+    width:100%;
+    text-align: center;
+}
+
+#about-desc h1{
+    font-size:3rem;
+    font-weight: 800;
+    width: 80%;
+}
+
+#about-desc p{
+    width:90%;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+#about-team{
+    width:100%;
+    min-height:90vh;
+    text-align: center;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background:#393D3F;
+    color:#FDFDFF;
+    flex-wrap: wrap;
+}
+
+#about-team h1{
+    font-size:3rem;
+    font-weight: 800;
+    width: 80%;
+}
+
+#about-team #team{
+    width: 95%;
+    min-height: 75%;
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin:auto;
+}
+
+#about-team #team .members{
+    text-align: center;
+    background:#FDFDFF;
+    color:#393D3F;
+    min-height: 300px;
+    width:300px;
+    border-radius: 10px;
+    margin: 0 25px;
+}
+
+#about-team #team .members h3{
+    width: 95%;
+    font-weight: 500;
+}
+
+#about-team #team .members img{
+    border-radius: 10px;
 }
