--- a/project/css/home.css
+++ b/project/css/home.css
@@ -15,9 +15,13 @@ body{
     color:#393D3F;
 }
 
+.highlight{
+    color:#149BBB;
+}
+
 #home{
     width: 100%;
-    height:90vh;
+    min-height:90vh;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -40,12 +44,11 @@ body{
 
 #home img{
     margin-right:60px;
-    border-radius: 5px;
 }
 
 #about-sec{
     width: 100%;
-    height:30vh;
+    min-height:30vh;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -55,7 +58,7 @@ body{
 #about-sec #about-area{
     background:#393D3F;
     width:80%;
-    height: 60%;
+    min-height: 60%;
     color:#FDFDFF;
     -webkit-box-shadow: 1px 1px 15px 0px rgba(0,0,0,0.4); 
     box-shadow: 1px 1px 15px 0px rgba(0,0,0,0.4);
@@ -64,6 +67,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 25px 0;
 }
 
 #about-sec #about-area h2{
@@ -73,7 +77,7 @@ body{
 
 #contact-sec{
     width: 100%;
-    height:75vh;
+    min-height:65vh;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -94,7 +98,3 @@ body{
     font-size: 1.5rem;
 }
 
-#contact-sec #contact-area img{
-    margin-right:60px;
-    border-radius: 5px;
-}
