--- a/project/css/home.css
+++ b/project/css/home.css
@@ -43,7 +43,7 @@ body{
 }
 
 #home img{
-    margin-right:60px;
+    margin-right:30px;
 }
 
 #about-sec{
@@ -98,3 +98,68 @@ body{
     font-size: 1.5rem;
 }
 
+@media only screen and (max-width:980px){
+    #home #home-info{
+        margin-left:40px;
+    }
+    #home img{
+        margin-right:0;
+        width:300px;
+        height:300px;
+    }
+    #contact-sec #contact-area{
+        margin-left:40px;
+    }
+    #contact-sec img{
+        width:300px;
+        height:300px;
+    }
+}
+
+@media only screen and (max-width:600px){
+    #home img{
+        display:none;
+    }
+    #home #home-info{
+        width:100%;
+        margin-left: 0;
+        text-align: center;
+    }
+    #contact-sec img{
+        display:none;
+    }
+    #contact-sec #contact-area{
+        width:100%;
+        margin-left: 0;
+        text-align: center;
+    }
+
+    #about-sec #about-area{
+        width:95%;
+    }
+}
+
+@media only screen and (max-width:365px){
+    #contact-sec #contact-area h1{
+        font-size: 2.5rem;
+    }
+    #contact-sec #contact-area h2{
+        font-size:1rem;
+    }
+    #about-sec #about-area h2{
+        font-size: 2rem;
+    }
+    
+    #home #home-info h1{
+        font-size: 2.5rem
+    }
+
+    #home #home-info h2{
+        font-size: 1rem;
+    }
+
+    #about-sec #about-area{
+        width: 100%;
+        border-radius: 0;
+    }
+}
