--- a/project/css/register.css
+++ b/project/css/register.css
@@ -27,6 +27,7 @@ span{
     display:flex;
     justify-content: center;
     align-items: center;
+    background: url(../img/login.png) no-repeat center center/cover;
 }
 
 #register #regarea{
