--- a/project/css/navbar.css
+++ b/project/css/navbar.css
@@ -19,6 +19,10 @@ nav ul li a{
     font-weight: 600;
 }
 
+.dropdown-content li > a, .dropdown-content li > span {
+   color: #393D3F !important;
+}
+
 #hamburger {
    color:  #393D3F;
 }
