added button to products

--- a/project/css/products.css
+++ b/project/css/products.css
@@ -25,7 +25,7 @@ body {
 .card.medium .card-image,
 .card.large .card-image {
   max-height: 77% !important;
-  overflow: hidden !important;
+  
 }
 
 .card.small {
@@ -40,11 +40,24 @@ body {
   min-height: 100vh; /* use "vh" instead of % */
 }
 
+span{
+  font-size: 2.5rem;
+}
+
+p{
+  font-size: 1rem;
+}
+
+
 @media only screen and (max-width: 1600px) {
   .card.horizontal.small .card-image img,
   .card.horizontal.medium .card-image img,
   .card.horizontal.large .card-image img {
     display: none;
+    
+  }
+  span{
+    font-size: 2rem;
   }
 }
 
@@ -53,5 +66,8 @@ body {
   .card.horizontal.medium .card-image img,
   .card.horizontal.large .card-image img {
     display: block;
+  }
+  span{
+    font-size: 1.5rem;
   }
 }
