--- a/project/css/products.css
+++ b/project/css/products.css
@@ -22,6 +22,7 @@ body {
   width: 400px;
 }
 
+
 .card.medium .card-image,
 .card.large .card-image {
   max-height: 77% !important;
@@ -41,11 +42,11 @@ body {
 }
 
 span{
-  font-size: 2.5rem;
+  font-size: 2.5rem !important;
 }
 
 p{
-  font-size: 1rem;
+  font-size: 1rem !important;
 }
 
 
@@ -58,7 +59,7 @@ p{
     
   }
   span{
-    font-size: 2rem;
+    font-size: 2rem !important;
   }
 }
 
@@ -69,6 +70,6 @@ p{
     display: block;
   }
   span{
-    font-size: 1.5rem;
+    font-size: 1.3rem !important;
   }
 }
