--- a/project/css/home.css
+++ b/project/css/home.css
@@ -81,6 +81,7 @@ body{
     display:flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 60px
 }
 
 #contact-sec #contact-area{
