--- a/project/css/reviews.css
+++ b/project/css/reviews.css
@@ -34,7 +34,7 @@ h2{
 }
 
 #feedback_title{
-    margin-bottom: 0 !important;
+    margin-bottom: 80px !important;
     margin-top: 0px !important;
     width:100%;
     min-height:50vh;
@@ -61,6 +61,7 @@ p{
 
 .carousel{
     height: 300px !important;
+    margin-bottom: 60px;
 }
 
 .star {
@@ -76,7 +77,7 @@ textarea.materialize-textarea {
 }
 
 #thanks {
-    margin-bottom: 0 !important;
+    margin-bottom: 80px !important;
     margin-top: 0px !important;
     width:100%;
     min-height:30vh;
