--- a/project/css/delete.css
+++ b/project/css/delete.css
@@ -39,3 +39,10 @@ p{
 .table_select{
     margin-bottom: 50px;
 }
+
+#insert-div{
+    width: 100%;
+    height: 90vh;
+    min-height: 90vh;
+    margin-bottom: 40px;
+}
