--- a/project/css/insert.css
+++ b/project/css/insert.css
@@ -48,7 +48,14 @@ h2{
 
 #messages{
     text-align: center;
-}  
+} 
+
+#insert-div{
+    width: 100%;
+    height: 90vh;
+    min-height: 90vh;
+    margin-bottom: 40px;
+}
 
   @media only screen and (max-width:980px){
     .container{
