--- a/project/css/select.css
+++ b/project/css/select.css
@@ -27,9 +27,15 @@ h2{
 
 }
 
-p{
+#error{
     font-size: 1rem;
     text-align: center;
     color:red;
 }  
 
+#insert-div{
+    width: 100%;
+    height: 90vh;
+    min-height: 90vh;
+    margin-bottom: 40px;
+}
