--- a/project/css/update.css
+++ b/project/css/update.css
@@ -36,6 +36,12 @@ p{
     color:#149BBB;
 }
 
+#insert-div{
+    width: 100%;
+    height: 90vh;
+    min-height: 90vh;
+    margin-bottom: 40px;
+}
 @media only screen and (max-width:600px){
     .col.s6 > .btn {
         width: 60%;
