--- a/project/css/delete.css
+++ b/project/css/delete.css
@@ -16,14 +16,14 @@ body{
 }
 
 h1{
-    font-size: 3rem;
+    font-size: 3rem !important;
     text-align: center;
-    font-weight: 800;
+    font-weight: 800 !important;
 }
 
 h2{
-    font-size: 1.5rem;
-    text-align: center;
+    font-size: 1.5rem !important;
+    text-align: center !important;
 
 }
 
