--- a/project/css/select.css
+++ b/project/css/select.css
@@ -16,13 +16,13 @@ body{
 }
 
 h1{
-    font-size: 3rem;
+    font-size: 3rem !important;
     text-align: center;
-    font-weight: 800;
+    font-weight: 800 !important;
 }
 
 h2{
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
     text-align: center;
 
 }
@@ -33,9 +33,9 @@ h2{
     color:red;
 }  
 
-#insert-div{
+#insertheight-div{
     width: 100%;
-    height: 90vh;
-    min-height: 90vh;
+    height: 200vh;
+    min-height: 200vh;
     margin-bottom: 40px;
 }
