--- a/project/css/reviews.css
+++ b/project/css/reviews.css
@@ -50,6 +50,12 @@ p{
     color:#149BBB;
 }
 
+#review-container{
+    width: 100%;
+    height: 70vh;
+    min-height: 70vh;
+}
+
 .carousel .carousel-item {
     width:400px !important;
     height: 300px !important;
