--- a/project/css/delete.css
+++ b/project/css/delete.css
@@ -46,3 +46,9 @@ p{
     min-height: 80vh;
     margin-bottom: 40px;
 }
+
+@media only screen and (max-width:325px){
+    h1{
+        font-size: 2.5rem !important;
+    }   
+}
