--- a/project/css/insert.css
+++ b/project/css/insert.css
@@ -69,3 +69,19 @@ h2{
      }
     
 }
+
+@media only screen and (max-width:325px){
+    h1{
+        font-size: 2.5rem !important;
+    }
+    .col.s12 > .btn {
+        width: 100%;
+     }
+     
+     #insertheight-div{
+        width: 100%;
+        height: 250vh;
+        min-height: 250vh;
+        margin-bottom: 40px;
+    }
+}
