--- a/project/css/select.css
+++ b/project/css/select.css
@@ -27,6 +27,10 @@ h2{
 
 }
 
+.highlight{
+    color:#149BBB;
+}
+
 #error{
     font-size: 1rem;
     text-align: center;
@@ -38,4 +42,14 @@ h2{
     height: 200vh;
     min-height: 200vh;
     margin-bottom: 40px;
+}
+
+@media only screen and (max-width:325px){
+    h1{
+        font-size: 2.5rem !important;
+    }
+    .col.s12 > .btn {
+        width: 100%;
+     }
+     
 }
