--- a/project/css/shoppingcart.css
+++ b/project/css/shoppingcart.css
@@ -56,3 +56,13 @@ body {
 .btn{
   margin-bottom: 50px;
 }
+
+@media only screen and (max-width: 1600px) {
+  .card.horizontal .card-image{
+    display: none;
+    
+  }
+  .cardspan{
+    font-size: 2rem !important;
+  }
+}
