--- a/scs/src/css/reviews.css
+++ b/scs/src/css/reviews.css
@@ -15,7 +15,7 @@ body{
     color:#393D3F;
 }
 
-h1 {
+/* h1 {
     font-size: 3rem !important;
     text-align: center !important;
     font-weight: 800 !important;
@@ -24,7 +24,7 @@ h1 {
 h2{
     font-size: 1rem !important;
     text-align: center !important;
-}
+} */
 
 
 #title h1{
