--- a/scs/src/css/home.css
+++ b/scs/src/css/home.css
@@ -41,6 +41,7 @@ body{
 
 #home #home-info{
     width: 50%;
+    text-align:center; 
 }
 
 #home #home-info h1{
@@ -93,7 +94,8 @@ body{
     display:flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 60px
+    margin-bottom: 60px;
+    text-align:center; 
 }
 
 #contact-sec #contact-area{
