--- a/scs/src/css/select.css
+++ b/scs/src/css/select.css
@@ -15,13 +15,13 @@ body{
     color:#393D3F;
 }
 
-h1{
+#title{
     font-size: 3rem !important;
     text-align: center;
     font-weight: 800 !important;
 }
 
-h2{
+#title2{
     font-size: 1.5rem !important;
     text-align: center;
 
@@ -45,7 +45,7 @@ h2{
 }
 
 @media only screen and (max-width:325px){
-    h1{
+    #title{
         font-size: 2.5rem !important;
     }
     .col.s12 > .btn {
