--- a/scs/src/css/reviews.css
+++ b/scs/src/css/reviews.css
@@ -16,26 +16,32 @@ body{
 }
 
 #description{
-    font-size: 1rem !important;
-    text-align: center !important;
+    font-size: 1rem;
+    text-align: center;
 }
 
 #title h1{
-    margin-bottom: 0 !important;
-    margin-top: 90px !important;
-    font-size: 3rem !important;
-    text-align: center !important;
-    font-weight: 800 !important;
+    margin-bottom: 0;
+    margin-top: 90px ;
+    font-size: 3rem ;
+    text-align: center ;
+    font-weight: 800 ;
     
 }
 
 #feedback_title{
-    margin-bottom: 150px !important;
-    margin-top: 0px !important;
+    margin-bottom: 150px;
+    margin-top: 0p;
     width:100%;
     min-height:50vh;
     background:#393D3F;
     color:#FDFDFF;
+}
+
+#feedback_title h1{
+    font-size: 3rem;
+    text-align: center;
+    font-weight: 800;
 }
 
 p{
@@ -50,7 +56,7 @@ p{
     width: 100%;
     height: 70vh;
     min-height: 70vh;
-    margin-bottom:800px;
+    margin-bottom:2000px;
 }
 
 .carousel .carousel-item {
@@ -67,12 +73,20 @@ p{
     margin-bottom: 60px;
 }
 
+.carousel-dynamic {
+    margin-top: 10vh;
+}
+
 .star {
     color: #FDCC0D;
 }
   
 textarea.materialize-textarea {
     height: 6rem !important;
+}
+
+.input-field{
+    margin-top: 12vh !important;
 }
 
 .input-field [type=text] {
@@ -83,9 +97,27 @@ textarea.materialize-textarea {
     margin-bottom: 150px !important;
     margin-top: 0px !important;
     width:100%;
-    min-height:30vh;
+    min-height:40vh;
     background:#393D3F;
     color:#FDFDFF;
+}
+
+#thanks h1{
+    font-size: 3rem ;
+    text-align: center ;
+    font-weight: 800 ;
+}
+
+#thanks h2{
+    font-size: 3rem ;
+    text-align: center ;
+    font-weight: 600 ;
+}
+
+#reviewTitle h1 {
+    font-size: 3rem ;
+    text-align: center ;
+    font-weight: 800 ;
 }
 
 
