--- a/scs/src/css/invoicecomplete.css
+++ b/scs/src/css/invoicecomplete.css
@@ -35,7 +35,8 @@ span {
   flex-direction: column;
   text-align: center;
   width: 60%;
-  height: 65%;
+  height: 800px;
+  min-height: 800px;
   background: #393d3f;
   -webkit-box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.4);
