--- a/scs/src/css/invoicecomplete.css
+++ b/scs/src/css/invoicecomplete.css
@@ -26,6 +26,7 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 200px;
 }
 
 #invoice-container #invoice-box {
